# multi-agent-supervisor

./: .gitignore  Dockerfile  README.md  RESULTS.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: hotpotqa_eval.py  smoke_parallel.py
benchmarks/baselines/: __init__.py  sequential.py  single_agent.py
benchmarks/results/: smoke_parallel.json
examples/: basic_query.py
src/multi_agent_supervisor/: __init__.py  cli.py  llm.py  state.py  supervisor.py
src/multi_agent_supervisor/agents/: __init__.py  analyzer.py  planner.py  retriever.py  synthesizer.py  verifier.py
src/multi_agent_supervisor/tools/: __init__.py  wikipedia.py
tests/: test_agents.py  test_baselines.py  test_llm.py  test_state.py  test_supervisor.py  test_tools.py
