[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-supervisor"
version = "0.1.0"
description = "LangGraph supervisor with parallel specialist agents. Hero: 2.4x speedup vs sequential on HotpotQA multi-hop, +F1 over single-prompt."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tajaddin Gafarov", email = "gafarovtajaddin@gmail.com" }]
keywords = ["langgraph", "multi-agent", "supervisor", "agent", "rag", "llm", "anthropic", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langgraph>=0.2.50,<0.3.0",
    "langchain-core>=0.3.21,<0.4.0",
    "anthropic>=0.39.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
eval = [
    "datasets>=2.21.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
mas = "multi_agent_supervisor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]
